tests/fixtures/valid/multi/bare_import_nested/src/nasa/main.gcl
include nasa.orbital.transfer().{ transfer_dv };

node dv: Velocity = @transfer_dv;
