tests/fixtures/invalid/multi/bare_import_mixed/src/nasa/main.gcl
// Mix of bare module path and file-based import/include
import nasa.constants.{ g0 };
include local_params().{ isp };

node v_exhaust: Velocity = @isp * @g0;
